<resources>
    <string name="app_name">My Application</string>
    <string name="google_maps_api_key">AIzaSyDP3fJIO-c-Gwtlc2OLtLIZGLD0OjZI3mI</string>
    <string name="logo">Logo</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="go_back">go_back</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_intermediate">intermediate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>