<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:padding="10dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_right_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlHeader" />

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="425dp"
        android:layout_marginTop="45dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llLoginPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_login_panel"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="145dp"
                android:gravity="end"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:translationX="120dp"
                android:translationY="5dp"
                app:layout_constraintTop_toTopOf="@+id/llLoginPanel" />

            <EditText
                android:id="@+id/register_vehicleno"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_licence_plate"
                android:hint="@string/vehicle_no"
                android:inputType="text"
                android:textSize="15sp"
                android:translationY="20dp" />



            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_mail"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="15sp"
                android:translationY="30dp"/>


            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_person"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textSize="15sp"
                android:translationY="40dp" />



            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:translationY="50dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:translationY="60dp" />


            <Button
                android:id="@+id/register_signup"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_login_button"
                android:onClick="Sign_Up"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:translationX="110dp"
                android:translationY="80dp"
                app:layout_constraintBottom_toBottomOf="@+id/llLoginPanel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:onClick="Login"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>