<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:padding="10dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_left_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlHeader" />

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="350dp"
        android:layout_marginTop="45dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llLoginPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_login_panel"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="15dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:foreground="@drawable/ic_go_back"
                android:background="@color/fui_transparent"
                android:text="@string/go_back"
                android:onClick="Go_Back"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-70dp"
                android:gravity="end"
                android:text="@string/reset_password"
                android:textSize="25sp"
                android:translationX="120dp"
                android:translationY="15dp"
                app:layout_constraintTop_toTopOf="@+id/llLoginPanel" />

            <EditText
                android:id="@+id/reset_vehicleno"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:drawableRight="@drawable/ic_licence_plate"
                android:hint="@string/vehicle_no"
                android:inputType="text"
                android:textSize="17sp"
                android:translationY="55dp" />



            <Button
                android:id="@+id/reset"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_login_button"
                android:onClick="Reset"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:translationX="85dp"
                android:translationY="105dp"
                app:layout_constraintBottom_toBottomOf="@+id/llLoginPanel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>